--- a/tests/test_filters.ipynb
+++ b/tests/test_filters.ipynb
@@ -9,15 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite\n",
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/output/annotations\n"
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/output/annotations\n"
      ]
     }
    ],
@@ -25,17 +24,17 @@
     "import os\n",
     "import time\n",
     "from Bio.SeqUtils import MeltingTemp as mt\n",
+    "import sys\n",
     "\n",
     "os.chdir('../' )\n",
     "cwd = os.getcwd()\n",
-    "print(cwd)\n",
+    "dir_output  = os.path.join(cwd, 'oligo_designer_toolsuite/output/annotations')\n",
+    "print(dir_output)\n",
+    "sys.path.append(cwd)\n",
     "\n",
-    "from IO._database import NcbiDB, EnsemblDB, CustomDB\n",
-    "from oligo_pre_filter._filter_base import MaskedSequences, GCContent, MeltingTemperature\n",
-    "from oligo_pre_filter._filter_padlock_probes import PadlockArms\n",
-    "\n",
-    "dir_output  = os.path.join(cwd, 'output/annotations')\n",
-    "print(dir_output)"
+    "from oligo_designer_toolsuite.IO._database import NcbiDB, EnsemblDB, CustomDB\n",
+    "from oligo_designer_toolsuite.oligo_pre_filter._filter_base import MaskedSequences, GCContent, MeltingTemperature\n",
+    "from oligo_designer_toolsuite.oligo_pre_filter._filter_padlock_probes import PadlockArms"
    ]
   },
   {
@@ -47,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +67,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Creating and filtering the probes: --- 8.812329292297363 seconds ---\n"
+      " Creating and filtering the probes: --- 8.997250080108643 seconds ---\n"
      ]
     }
    ],
@@ -120,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -128,11 +127,11 @@
      "output_type": "stream",
      "text": [
       "dict_keys(['WASH7P'])\n",
-      "AGAGGAGGACGAGGACGACTGGGAATCGTA\n",
-      "{'transcript_id': ['NR_024540.1'], 'exon_id': ['NR_024540.1_exon11'], 'chromosome': '1', 'start': [14464], 'end': [14494], 'strand': '-', 'length': 30, 'probe_id': 'WASH7P_pid1', 'GC_content': 56.67, 'melt_temp': 62.05, 'melt_temp_rm1': 43.24, 'melt_temp_arm2': 44.76, 'dif_melt_temp_arms': 1.52, 'ligation_site': 14.0}\n",
+      "WASH7P_104\n",
+      "{'probe_sequence': Seq('AGAGGAGGACGAGGACGACTGGGAATCGTA'), 'transcript_id': ['NR_024540.1'], 'exon_id': ['NR_024540.1_exon11'], 'chromosome': '1', 'start': [14464], 'end': [14494], 'strand': '-', 'length': 30, 'GC_content': 56.67, 'melt_temp': 62.05, 'melt_temp_rm1': 43.24, 'melt_temp_arm2': 44.76, 'dif_melt_temp_arms': 1.52, 'ligation_site': 14}\n",
       "dict_keys(['WASH7P'])\n",
-      "WASH7P_pid1\n",
-      "{'transcript_id': ['NR_024540.1'], 'exon_id': ['NR_024540.1_exon11'], 'chromosome': '1', 'start': [14464], 'end': [14494], 'strand': '-', 'length': 30, 'probe_id': 'WASH7P_pid1', 'GC_content': 56.67, 'melt_temp': 62.05, 'melt_temp_rm1': 43.24, 'melt_temp_arm2': 44.76, 'dif_melt_temp_arms': 1.52, 'ligation_site': 14.0}\n"
+      "WASH7P_104\n",
+      "{'probe_sequence': 'AGAGGAGGACGAGGACGACTGGGAATCGTA', 'transcript_id': ['NR_024540.1'], 'exon_id': ['NR_024540.1_exon11'], 'chromosome': '1', 'start': [14464], 'end': [14494], 'strand': '-', 'length': 30, 'GC_content': 56.67, 'melt_temp': 62.05, 'melt_temp_rm1': 43.24, 'melt_temp_arm2': 44.76, 'dif_melt_temp_arms': 1.52, 'ligation_site': 14.0}\n"
      ]
     }
    ],
@@ -144,7 +143,7 @@
     "print(seq)\n",
     "print(custom.oligos_DB[gene][seq])\n",
     "custom.write_oligos_DB_gtf()\n",
-    "custom.read_oligos_DB_gtf(custom.file_oligos_DB_gtf)\n",
+    "custom.read_oligos_DB_gtf(custom.file_oligos_DB_gtf, custom.file_oligos_DB_fasta)\n",
     "print(custom.oligos_DB.keys())\n",
     "gene = list(custom.oligos_DB.keys())[0]\n",
     "seq = list(custom.oligos_DB[gene].keys())[0]\n",
