--- a/tests/test_DB.ipynb
+++ b/tests/test_DB.ipynb
@@ -16,19 +16,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/output/annotations\n"
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/output/annotations\n"
      ]
     }
    ],
    "source": [
     "import os\n",
+    "import sys\n",
     "\n",
     "os.chdir('../' )\n",
     "cwd = os.getcwd()\n",
-    "dir_output  = os.path.join(cwd, 'output/annotations')\n",
+    "dir_output  = os.path.join(cwd, 'oligo_designer_toolsuite/output/annotations')\n",
     "print(dir_output)\n",
+    "sys.path.append(cwd)\n",
     "\n",
-    "from IO._database import NcbiDB, EnsemblDB, CustomDB"
+    "from oligo_designer_toolsuite.IO._database import NcbiDB, EnsemblDB, CustomDB"
    ]
   },
   {
@@ -76,13 +78,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:58: UserWarning: Species not specified.\n",
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:59: UserWarning: Species not specified.\n",
       "  warnings.warn(\"Species not specified.\")\n",
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:62: UserWarning: Genome assembly not specified.\n",
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:63: UserWarning: Genome assembly not specified.\n",
       "  warnings.warn(f\"Genome assembly not specified.\")\n",
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:66: UserWarning: Annotation release not specified.\n",
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:67: UserWarning: Annotation release not specified.\n",
       "  warnings.warn(f\"Annotation release not specified.\")\n",
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:70: UserWarning: Annotation source not specified.\n",
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:71: UserWarning: Annotation source not specified.\n",
       "  warnings.warn(f\"Annotation source not specified.\")\n"
      ]
     }
@@ -109,7 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "genes = ['WASH7P']#, 'DDX11L1', 'TRNT', 'NOC2L', 'PLEKHN1', 'AGRN','UBE2J2', 'DVL1', 'MIB2', 'LOC112268402_1' ]\n",
+    "genes = ['WASH7P', 'DDX11L1', 'TRNT', 'NOC2L', 'PLEKHN1', 'AGRN','UBE2J2', 'DVL1', 'MIB2', 'LOC112268402_1' ]\n",
     "custom.create_oligos_DB(genes = genes, number_batchs = 2, dir_output=dir_output)\n",
     "custom.write_oligos_DB_gtf()"
    ]
@@ -141,9 +143,9 @@
      "output_type": "stream",
      "text": [
       "list of all the genes in the DB:\n",
-      "dict_keys(['WASH7P'])\n",
+      "dict_keys(['WASH7P', 'DDX11L1', 'TRNT', 'NOC2L', 'PLEKHN1', 'AGRN', 'UBE2J2', 'DVL1', 'MIB2', 'LOC112268402_1'])\n",
       "Features of the first probe of the DB:\n",
-      "{'transcript_id': ['NR_024540.1'], 'exon_id': ['NR_024540.1_exon11'], 'chromosome': '1', 'start': [14381], 'end': [14411], 'strand': '-', 'length': 30, 'probe_id': 'WASH7P_pid21'}\n"
+      "{'probe_sequence': Seq('GCACCATGACTCCTGTGAGGATGCAGCACT'), 'transcript_id': ['NR_024540.1', 'NR_024540.1'], 'exon_id': ['NR_024540.1_exon2', 'NR_024540.1_exon2_NR_024540.1_exon1'], 'chromosome': '1', 'start': [24737, 24891], 'end': [24767, 24921], 'strand': '-', 'length': 30}\n"
      ]
     }
    ],
@@ -151,7 +153,33 @@
     "print(\"list of all the genes in the DB:\")\n",
     "print(custom.oligos_DB.keys())\n",
     "gene = list(custom.oligos_DB.keys())[0]\n",
-    "probe = list(custom.oligos_DB[gene].keys())[20]\n",
+    "probe = list(custom.oligos_DB[gene].keys())[0]\n",
+    "print(\"Features of the first probe of the DB:\")\n",
+    "print(custom.oligos_DB[gene][probe])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "list of all the genes in the DB:\n",
+      "dict_keys(['WASH7P', 'DDX11L1', 'TRNT', 'NOC2L', 'PLEKHN1', 'AGRN', 'UBE2J2', 'DVL1', 'MIB2', 'LOC112268402_1'])\n",
+      "Features of the first probe of the DB:\n",
+      "{'probe_sequence': Seq('GCACCATGACTCCTGTGAGGATGCAGCACT'), 'transcript_id': ['NR_024540.1', 'NR_024540.1'], 'exon_id': ['NR_024540.1_exon2', 'NR_024540.1_exon2_NR_024540.1_exon1'], 'chromosome': '1', 'start': [24737, 24891], 'end': [24767, 24921], 'strand': '-', 'length': 30}\n"
+     ]
+    }
+   ],
+   "source": [
+    "custom.read_oligos_DB_tsv(custom.file_oligos_DB_tsv)\n",
+    "print(\"list of all the genes in the DB:\")\n",
+    "print(custom.oligos_DB.keys())\n",
+    "gene = list(custom.oligos_DB.keys())[0]\n",
+    "probe = list(custom.oligos_DB[gene].keys())[0]\n",
     "print(\"Features of the first probe of the DB:\")\n",
     "print(custom.oligos_DB[gene][probe])"
    ]
@@ -166,14 +194,14 @@
      "output_type": "stream",
      "text": [
       "list of all the genes in the DB:\n",
-      "dict_keys(['WASH7P'])\n",
+      "dict_keys(['WASH7P', 'DDX11L1', 'TRNT', 'NOC2L', 'PLEKHN1', 'AGRN', 'UBE2J2', 'DVL1', 'MIB2', 'LOC112268402_1'])\n",
       "Features of the first probe of the DB:\n",
-      "{'transcript_id': ['NR_024540.1', 'NR_024540.1'], 'exon_id': ['NR_024540.1_exon11', 'NR_024540.1_exon11_NR_024540.1_exon10'], 'chromosome': '1', 'start': [14361, 14829], 'end': [14391, 14859], 'strand': '-', 'length': 30, 'probe_id': 'WASH7P_pid1'}\n"
+      "{'probe_sequence': Seq('GCACCATGACTCCTGTGAGGATGCAGCACT'), 'transcript_id': ['NR_024540.1', 'NR_024540.1'], 'exon_id': ['NR_024540.1_exon2', 'NR_024540.1_exon2_NR_024540.1_exon1'], 'chromosome': '1', 'start': [24737, 24891], 'end': [24767, 24921], 'strand': '-', 'length': 30}\n"
      ]
     }
    ],
    "source": [
-    "custom.read_oligos_DB_gtf(dir_output + '/oligo_DB_unknown_unknown_Custom_release_unknown_gene_transcript.gtf')\n",
+    "custom.read_oligos_DB_gtf(custom.file_oligos_DB_gtf, custom.file_oligos_DB_fasta)\n",
     "print(\"list of all the genes in the DB:\")\n",
     "print(custom.oligos_DB.keys())\n",
     "gene = list(custom.oligos_DB.keys())[0]\n",
