add functionality to bowtie filter

--- a/oligo_designer_toolsuite/test_filters.ipynb
+++ b/oligo_designer_toolsuite/test_filters.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -47,26 +47,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mCanceled future for execute_request message before replies were done"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from oligo_designer_toolsuite.IO._data_parser import read_gtf\n",
     "\n",
@@ -77,11 +60,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "genes=df[\"gene_id\"].tolist()[:100]"
+    "genes=df[\"gene_id\"].unique().tolist()[:10]"
    ]
   },
   {
@@ -93,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +98,7 @@
      "output_type": "stream",
      "text": [
       "the total number of probes found: 6367\n",
-      " Creating and filtering the probes: --- 379.2334680557251 seconds ---\n"
+      " Creating and filtering the probes: --- 472.6519136428833 seconds ---\n"
      ]
     }
    ],
@@ -165,15 +148,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['WASH7P', 'DDX11L1', 'TRNT', 'NOC2L', 'PLEKHN1', 'AGRN', 'UBE2J2', 'DVL1', 'MIB2', 'LOC112268402_1'])\n",
-      "{'transcript_id': ['NR_024540.1'], 'exon_id': ['NR_024540.1_exon2'], 'chromosome': '1', 'start': [24848], 'end': [24878], 'strand': '-', 'GC_content': 60.0, 'melt_temp': 62.22, 'melt_temp_rm1': 42.84, 'melt_temp_arm2': 42.99, 'dif_melt_temp_arms': 0.15, 'ligation_site': 14}\n"
+      "dict_keys(['DDX11L1', 'WASH7P', 'MIR6859-1', 'MIR1302-2HG', 'MIR1302-2', 'FAM138A', 'OR4G4P', 'OR4G11P', 'OR4F5', 'LOC124903816', 'LOC124900384', 'SEPTIN14P18', 'CICP27', 'LOC729737', 'RNU6-1100P', 'GTF2IP10', 'LOC124903814', 'DDX11L17', 'LOC100996442', 'RPL23AP21', 'LOC124903815', 'RPL23AP24', 'LOC124900618', 'LOC112268260', 'WBP1LP7', 'OR4F29', 'SEPTIN14P13', 'CICP7', 'LOC100132287', 'LOC124904706', 'LOC105378947', 'LOC101928626', 'MTND1P23', 'MTND2P28', 'MTCO1P12', 'MIR12136', 'MTCO2P12', 'MTATP8P1', 'MTATP6P1', 'MTCO3P12', 'WBP1LP6', 'OR4F16', 'SEPTIN14P14', 'CICP3', 'LOC100288069', 'RNU6-1199P', 'LINC01409', 'LOC124903817', 'FAM87B', 'LINC00115', 'LINC01128', 'LOC107984850', 'FAM41C', 'TUBB8P11', 'LOC284600', 'LINC02593', 'LOC107985728', 'SAMD11', 'NOC2L', 'KLHL17', 'PLEKHN1'])\n",
+      "{'transcript_id': ['NR_046018.2'], 'exon_id': ['NR_046018.2_exon1'], 'chromosome': '1', 'start': [11873], 'end': [11903], 'strand': '+', 'GC_content': 50.0, 'melt_temp': 58.95, 'melt_temp_arm1': 40.2, 'melt_temp_arm2': 40.76, 'dif_melt_temp_arms': 0.56, 'ligation_site': 12}\n"
      ]
     }
    ],
