--- a/oligo_designer_toolsuite/tests/benchmark_specificity_filter.ipynb
+++ b/oligo_designer_toolsuite/tests/benchmark_specificity_filter.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,9 +84,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:filter_probes:Creating batches\n",
+      "INFO:filter_probes:Exact matches filtered in 0.5288085000001956 seconds\n",
+      "INFO:filter_probes:Creating blast database\n",
+      "INFO:filter_probes:Blast database created in 27.879516999999396 seconds\n",
+      "INFO:filter_probes:Blast alignmnet search finished in 9.00010360000033 seconds\n",
+      "INFO:filter_probes:Blast results processed in 0.9777730000005249 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "number_batches=len(genes)\n",
@@ -118,9 +131,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:filter_probes:Creating batches\n",
+      "INFO:filter_probes:Exact matches filtered in 0.41575880000073084 seconds\n",
+      "INFO:filter_probes:Creating blast database\n",
+      "INFO:filter_probes:Blast database created in 39.262963899999704 seconds\n",
+      "INFO:filter_probes:Blast alignmnet search finished in 10.247859300000528 seconds\n",
+      "INFO:filter_probes:Blast results processed in 0.7422986000001401 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "number_batches=8\n",
     "\n",
