--- a/oligo_designer_toolsuite/tests/test_specificity_filter.ipynb
+++ b/oligo_designer_toolsuite/tests/test_specificity_filter.ipynb
@@ -120,79 +120,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Bio.SeqUtils import MeltingTemp as mt\n",
-    "Tm_parameters = {\n",
-    "        'check': True,\n",
-    "        'strict': True,\n",
-    "        'c_seq': None,\n",
-    "        'shift': 0,\n",
-    "        'nn_table': getattr(mt,'DNA_NN3'),\n",
-    "        'tmm_table': getattr(mt,'DNA_TMM1'),\n",
-    "        'imm_table': getattr(mt,'DNA_IMM1'),\n",
-    "        'de_table': getattr(mt, 'DNA_DE1'),\n",
-    "        'dnac1': 50, #[nM]\n",
-    "        'dnac2': 0,\n",
-    "        'selfcomp': False,\n",
-    "        'dNTPs': 0,\n",
-    "        'saltcorr': 7,\n",
-    "        'Na': 1.25, #[mM]\n",
-    "        'K': 75, #[mM]\n",
-    "        'Tris': 20, #[mM]\n",
-    "        'Mg': 10, #[mM] \n",
-    "        }\n",
-    "Tm_correction_parameters = {\n",
-    "        'DMSO': 0,\n",
-    "        'DMSOfactor': 0.75,\n",
-    "        'fmdfactor': 0.65,\n",
-    "        'fmdmethod': 1,\n",
-    "        'GC': None,\n",
-    "        'fmd': 20}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/chels/CRISPR/repos/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:55: UserWarning: Species not specified.\n",
-      "  warnings.warn(\"Species not specified.\")\n",
-      "/home/chels/CRISPR/repos/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:59: UserWarning: Genome assembly not specified.\n",
-      "  warnings.warn(f\"Genome assembly not specified.\")\n",
-      "/home/chels/CRISPR/repos/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:63: UserWarning: Annotation release not specified.\n",
-      "  warnings.warn(f\"Annotation release not specified.\")\n",
-      "/home/chels/CRISPR/repos/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:67: UserWarning: Annotation source not specified.\n",
-      "  warnings.warn(f\"Annotation source not specified.\")\n"
-     ]
-    }
-   ],
-   "source": [
     "os.chdir(cwd + \"/oligo_designer_toolsuite\")\n",
-    "from IO._database import CustomDB\n",
-    "from oligo_pre_filter._filter_base import MaskedSequences, GCContent, MeltingTemperature\n",
-    "from oligo_pre_filter._filter_padlock_probes import PadlockArms\n",
-    "annotation = dir_annotations+'GCF_000001405.40_GRCh38.p14_genomic.gtf'\n",
-    "sequence = dir_annotations+'GCF_000001405.40_GRCh38.p14_genomic.fna'\n",
-    "masked_sequences = MaskedSequences()\n",
-    "GC_content = GCContent(GC_content_min = 40, GC_content_max = 60)\n",
-    "melting_temperature = MeltingTemperature(Tm_min = 52, Tm_max= 67, Tm_parameters = Tm_parameters, Tm_correction_parameters = Tm_correction_parameters)\n",
-    "arms_tm = PadlockArms(min_arm_length=10,max_Tm_dif=2,Tm_min=40,Tm_max=43, Tm_parameters = Tm_parameters, Tm_correction_parameters = Tm_correction_parameters)\n",
-    "filters = [masked_sequences, GC_content, melting_temperature, arms_tm]\n",
-    "custom = CustomDB(probe_length_min = 30, probe_length_max=40, file_annotation=annotation, file_sequence=sequence, filters=filters)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '-'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/home/chels/CRISPR/repos/oligo-designer-toolsuite/oligo_designer_toolsuite/tests/test_specificity_filter.ipynb Cell 8\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/chels/CRISPR/repos/oligo-designer-toolsuite/oligo_designer_toolsuite/tests/test_specificity_filter.ipynb#X11sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mIO\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39m_data_parser\u001b[39;00m \u001b[39mimport\u001b[39;00m read_oligos_DB_tsv\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/chels/CRISPR/repos/oligo-designer-toolsuite/oligo_designer_toolsuite/tests/test_specificity_filter.ipynb#X11sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m read_oligos_DB_tsv(file_probe_info)\n",
+      "File \u001b[0;32m~/CRISPR/repos/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_data_parser.py:539\u001b[0m, in \u001b[0;36mread_oligos_DB_tsv\u001b[0;34m(file_oligos_DB_tsv)\u001b[0m\n\u001b[1;32m    537\u001b[0m current_gene \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    538\u001b[0m \u001b[39mfor\u001b[39;00m line \u001b[39min\u001b[39;00m handle_probe:\n\u001b[0;32m--> 539\u001b[0m     current_gene, oligos_DB \u001b[39m=\u001b[39m parse_line_tsv(\n\u001b[1;32m    540\u001b[0m         line, oligos_DB, current_gene, add_features\n\u001b[1;32m    541\u001b[0m     )\n\u001b[1;32m    543\u001b[0m handle_probe\u001b[39m.\u001b[39mclose()\n\u001b[1;32m    544\u001b[0m \u001b[39mreturn\u001b[39;00m oligos_DB\n",
+      "File \u001b[0;32m~/CRISPR/repos/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_data_parser.py:514\u001b[0m, in \u001b[0;36mread_oligos_DB_tsv.<locals>.parse_line_tsv\u001b[0;34m(line, oligos_DB, current_gene, add_features)\u001b[0m\n\u001b[1;32m    512\u001b[0m oligos_DB[current_gene][probe_id][\u001b[39m\"\u001b[39m\u001b[39mchromosome\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m line[\u001b[39m5\u001b[39m]\n\u001b[1;32m    513\u001b[0m oligos_DB[current_gene][probe_id][\u001b[39m\"\u001b[39m\u001b[39mstart\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(\u001b[39mmap\u001b[39m(\u001b[39mint\u001b[39m, line[\u001b[39m6\u001b[39m]\u001b[39m.\u001b[39msplit(\u001b[39m\"\u001b[39m\u001b[39m;\u001b[39m\u001b[39m\"\u001b[39m)))\n\u001b[0;32m--> 514\u001b[0m oligos_DB[current_gene][probe_id][\u001b[39m\"\u001b[39m\u001b[39mend\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39;49m(\u001b[39mmap\u001b[39;49m(\u001b[39mint\u001b[39;49m, line[\u001b[39m7\u001b[39;49m]\u001b[39m.\u001b[39;49msplit(\u001b[39m\"\u001b[39;49m\u001b[39m;\u001b[39;49m\u001b[39m\"\u001b[39;49m)))\n\u001b[1;32m    515\u001b[0m oligos_DB[current_gene][probe_id][\u001b[39m\"\u001b[39m\u001b[39mstrand\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m line[\u001b[39m8\u001b[39m]\n\u001b[1;32m    516\u001b[0m oligos_DB[current_gene][probe_id][\u001b[39m\"\u001b[39m\u001b[39mlength\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(line[\u001b[39m9\u001b[39m])\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '-'"
+     ]
+    }
+   ],
    "source": [
-    "custom.read_oligos_DB(file_probe_info)\n",
-    "probe_info=custom.oligos_DB"
+    "from IO._data_parser import read_oligos_DB_tsv\n",
+    "read_oligos_DB_tsv(file_probe_info)"
    ]
   },
   {
