change input of filters to accept oligo dictionary and refactor code

--- a/tests/test_loader.ipynb
+++ b/tests/test_loader.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from _ftp_loader import FtpLoaderEnsembl, FTPLoaderNCBI\n",
     "import os\n",
-    "from _data_parser import read_gtf, check_gtf_format, check_fasta_format, check_tsv_format"
+    "from oligo_designer_toolsuite.IO._ftp_loader import FtpLoaderEnsembl, FTPLoaderNCBI\n",
+    "from oligo_designer_toolsuite.IO._data_parser import read_gtf, check_gtf_format, check_fasta_format, check_tsv_format"
    ]
   },
   {
@@ -24,26 +24,6 @@
     "\n",
     "species= 'human' # available species: human or mouse\n",
     "annotation_release= 'current'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/chels/CRISPR/repos/oligo-designer-toolsuite/oligo_designer_toolsuite/IO'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cwd"
    ]
   },
   {
