add ligation region argument to bowtie filter

--- a/tests/test_specificity_filter.ipynb
+++ b/tests/test_specificity_filter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,12 +48,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
     "n_jobs=8\n",
-    "ligation_region=0\n",
+    "ligation_region=10\n",
     "dir_output=cwd + \"/output\"\n",
     "dir_annotations=cwd+\"/data\"\n",
     "file_probe_info=dir_annotations + \"/oligo_DB_unknown_unknown_Custom_release_unknown_gene_transcript.tsv\"\n",
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,14 +125,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [],
    "source": [
     "n_jobs=10\n",
     "min_mismatches=4\n",
     "mismatch_region=5\n",
-    "ligation_region=5\n",
+    "ligation_region=7\n",
     "\n",
     "bowtie_filter=ProbeFilterBowtie(n_jobs,\n",
     "        dir_output,dir_annotations,\n",
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -170,79 +170,170 @@
      "output_type": "stream",
      "text": [
       "INFO:filter_probes:Creating batches\n",
-      "INFO:filter_probes:Exact matches filtered in 7.421401499999774 seconds\n"
+      "INFO:filter_probes:Exact matches filtered in 4.182710199995199 seconds\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "# reads processed: 3235\n",
-      "# reads with at least one reported alignment: 3235 (100.00%)\n",
-      "# reads that failed to align: 0 (0.00%)\n",
-      "Reported 30205 alignments to 1 output stream(s)\n",
-      "# reads processed: 5736\n",
-      "# reads with at least one reported alignment: 5736 (100.00%)\n",
-      "# reads that failed to align: 0 (0.00%)\n",
-      "Reported 10770 alignments to 1 output stream(s)\n",
-      "# reads processed: 59\n",
-      "# reads with at least one reported alignment: 59 (100.00%)\n",
-      "# reads that failed to align: 0 (0.00%)\n",
-      "Reported 59 alignments to 1 output stream(s)\n",
       "# reads processed: 2960\n",
       "# reads with at least one reported alignment: 2960 (100.00%)\n",
       "# reads that failed to align: 0 (0.00%)\n",
       "Reported 4038 alignments to 1 output stream(s)\n",
-      "# reads processed: 5652\n",
-      "# reads with at least one reported alignment: 5652 (100.00%)\n",
+      "# reads processed: 5736\n",
+      "# reads with at least one reported alignment: 5736 (100.00%)\n",
       "# reads that failed to align: 0 (0.00%)\n",
-      "Reported 55176 alignments to 1 output stream(s)\n",
-      "# reads processed: 2913\n",
-      "# reads with at least one reported alignment: 2913 (100.00%)\n",
-      "# reads that failed to align: 0 (0.00%)\n",
-      "Reported 3638 alignments to 1 output stream(s)\n",
+      "Reported 10770 alignments to 1 output stream(s)\n",
       "# reads processed: 5284\n",
       "# reads with at least one reported alignment: 5284 (100.00%)\n",
       "# reads that failed to align: 0 (0.00%)\n",
       "Reported 5920 alignments to 1 output stream(s)\n",
+      "# reads processed: 59\n",
+      "# reads with at least one reported alignment: 59 (100.00%)\n",
+      "# reads that failed to align: 0 (0.00%)\n",
+      "Reported 59 alignments to 1 output stream(s)\n",
+      "# reads processed: 2913\n",
+      "# reads with at least one reported alignment: 2913 (100.00%)\n",
+      "# reads that failed to align: 0 (0.00%)\n",
+      "Reported 3638 alignments to 1 output stream(s)\n",
+      "# reads processed: 3235\n",
+      "# reads with at least one reported alignment: 3235 (100.00%)\n",
+      "# reads that failed to align: 0 (0.00%)\n",
+      "Reported 30205 alignments to 1 output stream(s)\n",
+      "# reads processed: 5652\n",
+      "# reads with at least one reported alignment: 5652 (100.00%)\n",
+      "# reads that failed to align: 0 (0.00%)\n",
+      "Reported 55176 alignments to 1 output stream(s)\n",
       "# reads processed: 8190\n",
       "# reads with at least one reported alignment: 8190 (100.00%)\n",
       "# reads that failed to align: 0 (0.00%)\n",
-      "Reported 237386 alignments to 1 output stream(s)\n",
-      "# reads processed: 9285\n",
-      "# reads with at least one reported alignment: 9285 (100.00%)\n",
-      "# reads that failed to align: 0 (0.00%)\n",
-      "Reported 40300 alignments to 1 output stream(s)\n"
+      "Reported 237386 alignments to 1 output stream(s)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:filter_probes:Bowtie alignmnet search finished in 125.41334970000025 seconds\n"
+      "Unexpected exception formatting exception. Falling back to standard exception\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "# reads processed: 10881\n",
-      "# reads with at least one reported alignment: 10881 (100.00%)\n",
-      "# reads that failed to align: 0 (0.00%)\n",
-      "Reported 76479 alignments to 1 output stream(s)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:filter_probes:Bowtie results processed in 3.967655800002831 seconds\n"
+      "Traceback (most recent call last):\n",
+      "  File \"/home/chels/anaconda3/envs/oligo/lib/python3.10/site-packages/IPython/core/interactiveshell.py\", line 3397, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"/tmp/ipykernel_4168/1462788976.py\", line 1, in <cell line: 1>\n",
+      "    bowtie_filter.apply(probe_info_dict)\n",
+      "  File \"/home/chels/CRISPR/repos/oligo-designer-toolsuite/oligo_designer_toolsuite/oligo_specificity_filter/_filter_bowtie.py\", line 310, in apply\n",
+      "    self.run_bowtie()\n",
+      "  File \"/home/chels/CRISPR/repos/oligo-designer-toolsuite/oligo_designer_toolsuite/oligo_specificity_filter/_filter_bowtie.py\", line 136, in run_bowtie\n",
+      "    Parallel()(\n",
+      "  File \"/home/chels/anaconda3/envs/oligo/lib/python3.10/site-packages/joblib/parallel.py\", line 1056, in __call__\n",
+      "    self.retrieve()\n",
+      "  File \"/home/chels/anaconda3/envs/oligo/lib/python3.10/site-packages/joblib/parallel.py\", line 935, in retrieve\n",
+      "    self._output.extend(job.get(timeout=self.timeout))\n",
+      "  File \"/home/chels/anaconda3/envs/oligo/lib/python3.10/site-packages/joblib/_parallel_backends.py\", line 542, in wrap_future_result\n",
+      "    return future.result(timeout=timeout)\n",
+      "  File \"/home/chels/anaconda3/envs/oligo/lib/python3.10/concurrent/futures/_base.py\", line 441, in result\n",
+      "    self._condition.wait(timeout)\n",
+      "  File \"/home/chels/anaconda3/envs/oligo/lib/python3.10/threading.py\", line 320, in wait\n",
+      "    waiter.acquire()\n",
+      "KeyboardInterrupt\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/chels/anaconda3/envs/oligo/lib/python3.10/site-packages/IPython/core/interactiveshell.py\", line 1992, in showtraceback\n",
+      "    stb = self.InteractiveTB.structured_traceback(\n",
+      "  File \"/home/chels/anaconda3/envs/oligo/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 1118, in structured_traceback\n",
+      "    return FormattedTB.structured_traceback(\n",
+      "  File \"/home/chels/anaconda3/envs/oligo/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 1012, in structured_traceback\n",
+      "    return VerboseTB.structured_traceback(\n",
+      "  File \"/home/chels/anaconda3/envs/oligo/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 865, in structured_traceback\n",
+      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
+      "  File \"/home/chels/anaconda3/envs/oligo/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 818, in format_exception_as_a_whole\n",
+      "    frames.append(self.format_record(r))\n",
+      "  File \"/home/chels/anaconda3/envs/oligo/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 736, in format_record\n",
+      "    result += ''.join(_format_traceback_lines(frame_info.lines, Colors, self.has_colors, lvals))\n",
+      "  File \"/home/chels/anaconda3/envs/oligo/lib/python3.10/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "  File \"/home/chels/anaconda3/envs/oligo/lib/python3.10/site-packages/stack_data/core.py\", line 698, in lines\n",
+      "    pieces = self.included_pieces\n",
+      "  File \"/home/chels/anaconda3/envs/oligo/lib/python3.10/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "  File \"/home/chels/anaconda3/envs/oligo/lib/python3.10/site-packages/stack_data/core.py\", line 649, in included_pieces\n",
+      "    pos = scope_pieces.index(self.executing_piece)\n",
+      "  File \"/home/chels/anaconda3/envs/oligo/lib/python3.10/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "  File \"/home/chels/anaconda3/envs/oligo/lib/python3.10/site-packages/stack_data/core.py\", line 628, in executing_piece\n",
+      "    return only(\n",
+      "  File \"/home/chels/anaconda3/envs/oligo/lib/python3.10/site-packages/executing/executing.py\", line 164, in only\n",
+      "    raise NotOneValueFound('Expected one value, found 0')\n",
+      "executing.executing.NotOneValueFound: Expected one value, found 0\n"
      ]
     }
    ],
    "source": [
     "bowtie_filter.apply(probe_info_dict)\n",
+    "#find a probe with mismatch in ligation region and run on that. \n",
+    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Get mismatches in ligation region for bowtie\n",
+    "\n",
+    "import pandas as pd\n",
+    "bowtie_results_matches=pd.read_csv(\"output/bowtie/bowtie_batch0_0.txt\", sep=\"\\t\", header=None)\n",
+    "\n",
+    "#Get probes where mismatch positions are given\n",
+    "bowtie_results_matches_mismatch_positions=bowtie_results_matches[bowtie_results_matches[7].notna()]\n",
+    "#Extract positions\n",
+    "positions=bowtie_results_matches_mismatch_positions[7].str.split(\",\").apply(lambda x: [elem.split(\":\")[0] for elem in x])\n",
+    "#add positions to bowtie results \n",
+    "bowtie_results_matches_positions = bowtie_results_matches.merge(\n",
+    "                    positions,\n",
+    "                    left_index=True,\n",
+    "                    right_index=True,\n",
+    "                    how=\"left\"\n",
+    "                )\n",
+    "                \n",
+    "probes_info=pd.read_csv(\"data/probes_info_batch0.txt\", sep=\"\\t\", header=0)\n",
+    "bowtie_results_add_ligation = bowtie_results_matches_positions.merge(\n",
+    "    probes_info[[\"probe_id\", \"ligation_site\"]],\n",
+    "    left_on=0,\n",
+    "    right_on=\"probe_id\",\n",
+    "    how=\"inner\",\n",
+    ")\n",
+    "\n",
+    "#Calculate ligation region\n",
+    "ligation_region=10\n",
+    "bowtie_results_add_ligation['ligation_region_start']=bowtie_results_add_ligation.ligation_site-(ligation_region-1)\n",
+    "bowtie_results_add_ligation['ligation_region_end']=bowtie_results_add_ligation.ligation_site+ligation_region\n",
+    "\n",
+    "bowtie_results_add_ligation.rename(columns={\"7_y\":\"positions\"}, inplace=True)\n",
+    "bowtie_results_add_ligation['mismatch_in_ligation']=[False for i in range(len(bowtie_results_add_ligation))]\n",
+    "bowtie_results_add_ligation_notna=bowtie_results_add_ligation[bowtie_results_add_ligation[\"positions\"].notna()]\n",
+    "\n",
+    "def mismatch_in_ligation(row):\n",
+    "    mismatches_in_region=[]\n",
+    "    for mismatch in row[\"positions\"]:\n",
+    "        if int(mismatch) >= int(row[\"ligation_region_start\"]) and int(mismatch) <= int(row[\"ligation_region_end\"]):\n",
+    "            mismatches_in_region.append(True)\n",
+    "    if len(mismatches_in_region)>0:\n",
+    "        row['mismatch_in_ligation']=mismatches_in_region[0]\n",
+    "        row[\"num_mismatches_in_ligation\"] = len(mismatches_in_region)\n",
+    "    return row\n",
+    "\n",
+    "bowtie_results_add_ligation_notna=bowtie_results_add_ligation_notna.apply(mismatch_in_ligation, axis=1)"
    ]
   },
   {
