--- a/oligo_designer_toolsuite/IO/test_loader.ipynb
+++ b/oligo_designer_toolsuite/IO/test_loader.ipynb
@@ -130,7 +130,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('oligo': conda)",
+   "display_name": "Python 3.10.4 ('oligo')",
    "language": "python",
    "name": "python3"
   },
@@ -149,7 +149,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "797cf0fae3aa9496144015db7114399f14bdbbab56900ed16736529315e01dbb"
+    "hash": "7ff94d65164c54a2126c7dc0869520902e3a005d5dddb9f8c3667ad0fd9373c9"
    }
   }
  },
