--- a/tests/test_probesets.ipynb
+++ b/tests/test_probesets.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/francesco/Desktop/Work/oligo_designer_toolsuite/output\n"
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/output\n"
      ]
     }
    ],
@@ -24,12 +24,12 @@
     "\n",
     "from oligo_designer_toolsuite.IO._database import CustomDB\n",
     "from oligo_designer_toolsuite.oligo_selection._resolve_overlapping_oligos import ProbesetGenerator\n",
-    "from oligo_designer_toolsuite.oligo_selection._probe_scoring import PadlockScoring\n",
+    "from oligo_designer_toolsuite.oligo_selection._probe_scoring import PadlockProbeScoring, PadlockSetScoring\n",
     "from oligo_designer_toolsuite.oligo_selection._heuristic_methods import padlock_heuristic_selection\n",
     "\n",
     "os.chdir('../' )\n",
     "cwd = os.getcwd()\n",
-    "dir_output  = os.path.join(cwd, 'oligo_designer_toolsuite/output')\n",
+    "dir_output  = os.path.join(cwd, 'oligo-designer-toolsuite/output')\n",
     "print(dir_output)\n",
     "\n"
    ]
@@ -78,7 +78,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time to process: 1.9897549152374268\n"
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "time to process: 2.2627978324890137\n"
      ]
     }
    ],
@@ -87,17 +97,51 @@
     "database.read_oligos_DB(format = 'tsv', file_oligos_DB_tsv = file_oligos)\n",
     "#enalrge teh DB\n",
     "genes = list(database.oligos_DB.keys())\n",
-    "#for gene in genes:\n",
-    "    #for i in range(100):\n",
-    "        #database.oligos_DB[gene+f'_{i}'] = database.oligos_DB[gene]\n",
-    "padlock_scoring = PadlockScoring(Tm_min = 52, Tm_opt = 60, Tm_max = 67, GC_min = 40, GC_opt = 50, GC_max = 60)\n",
-    "n_jobs = 2\n",
-    "probeset_generator = ProbesetGenerator(n_probes_per_gene = 5, min_n_probes_per_gene = 2, DB = database, probes_scoring = padlock_scoring, heurustic_selection = padlock_heuristic_selection, n_jobs=n_jobs)\n",
+    "for gene in genes:\n",
+    "    for i in range(1):\n",
+    "        database.oligos_DB[gene+f'_{i}'] = database.oligos_DB[gene]\n",
+    "padlock_scoring = PadlockProbeScoring(Tm_min = 52, Tm_opt = 60, Tm_max = 67, GC_min = 40, GC_opt = 50, GC_max = 60)\n",
+    "set_scoring = PadlockSetScoring()\n",
+    "n_jobs = 12\n",
+    "probeset_generator = ProbesetGenerator(n_probes_per_gene = 5, \n",
+    "                                        min_n_probes_per_gene = 2, DB = database, \n",
+    "                                        probes_scoring = padlock_scoring, \n",
+    "                                        heurustic_selection = padlock_heuristic_selection, \n",
+    "                                        set_scoring=set_scoring,\n",
+    "                                        n_jobs=n_jobs\n",
+    "                                    )\n",
     "start = time.time()\n",
     "database = probeset_generator.get_probe_sets(n_sets=100)\n",
-    "print(f'time to process: {time.time() - start}')\n",
-    "del database\n",
-    "del probeset_generator"
+    "print(f'time to process: {time.time() - start}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function apply in module oligo_designer_toolsuite.oligo_selection._probe_scoring:\n",
+      "\n",
+      "apply(self, probes, probes_indices)\n",
+      "    Scores all the probes using the defiend scoring function. The scores are both saved in the dictionary\n",
+      "    and in a pandas.Series. The latter is generated because it is the fastest way to generate the sets.\n",
+      "    \n",
+      "    :param probes: dictionary containing the probes\n",
+      "    :type probes: dict\n",
+      "    :param probes_indices: list of the indices of the probes used as a reference to keep the ordering of the probes consistent\n",
+      "    :type probes_indices: np.array\n",
+      "    :return: updated dictionary of the probes, series with the computed scores\n",
+      "    :rtype: dict, pandas.Series\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(PadlockProbeScoring.apply)"
    ]
   }
  ],
