update of the import stategy

--- a/tests/test_filters.ipynb
+++ b/tests/test_filters.ipynb
@@ -30,9 +30,9 @@
     "cwd = os.getcwd()\n",
     "dir_output  = os.path.join(cwd, 'oligo_designer_toolsuite/output/annotations')\n",
     "print(dir_output)\n",
-    "sys.path.append(cwd)\n",
+    "#sys.path.append(cwd)\n",
     "\n",
-    "from oligo_designer_toolsuite.IO._database import NcbiDB, EnsemblDB, CustomDB\n",
+    "from oligo_designer_toolsuite.IO import NcbiDB, EnsemblDB, CustomDB\n",
     "from oligo_designer_toolsuite.oligo_pre_filter._filter_base import MaskedSequences, GCContent, MeltingTemperature\n",
     "from oligo_designer_toolsuite.oligo_pre_filter._filter_padlock_probes import PadlockArms"
    ]
